--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
   min-height: 3000px;
 }
 .jumbotron {
-  padding-top: 7rem;
-
+  padding-top: 5rem;
+  min-height: auto;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(img/toba.jpg);
   width: 100%;
   height: 100vh;
